alignments fixing

--- a/style/style.css
+++ b/style/style.css
@@ -2,21 +2,34 @@
   margin: 0;
   box-sizing: border-box;
 }
-.wrapper {
+/* ------  Section 1 -------- */
+
+.section-1-wrapper {
   width: 100%;
-  height: 450px;
+  background-color: rgba(51, 51, 51, 0.5);
 }
 
-.wrapper-data-container {
+.sec-1-data {
   position: relative;
   text-align: center;
   color: white;
+  min-height: 450px;
 }
-.wrapper-data-container .image {
+.sec-1-data .image {
+  position: absolute;
   width: 100%;
-  object-fit: cover;
+  height: 450px;
+  background: #333 url("../images/bg-img.png");
+
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
-.section-1-text {
+.sec-1-content {
+  width: 80%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -24,15 +37,15 @@
   z-index: 10;
 }
 
-.section-1-text h1 {
-  font-size: 1.5rem;
+.sec-1-content h1 {
+  font-size: 2.2rem;
   font-weight: bold;
   /* padding: 10px; */
   font-family: Arial, Helvetica, sans-serif;
   color: white;
   line-height: 1.5;
 }
-.section-1-text p {
+.sec-1-content p {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.1rem;
 
@@ -40,15 +53,21 @@
   padding: 1.5rem;
   line-height: 1.5;
 }
-.section-1-text button {
+.sec-1-content button {
   padding: 20px 35px;
   font-size: 18px;
   background-color: #333;
   color: white;
   border: 0.1px solid rgb(134, 134, 134);
 }
+button:hover {
+  background-color: white;
+  color: black;
+  transition: all 0.3s;
+  cursor: pointer;
+}
 
-.wrapper::after {
+/* .wrapper::after {
   content: "";
   position: absolute;
   top: 0;
@@ -57,16 +76,77 @@
   height: 100%;
   background-color: rgb(49, 49, 49, 0.5);
   z-index: 1;
-}
-/* .section-2-text {
-  -webkit-column-count: 4;
-  -moz-column-count: 4;
-  column-count: 4;
-  padding-top: 35px;
-  text-align: justify;
 } */
-@media (max-width: 700px) {
-  .wrapper {
-    height: 600px;
+
+/* ------  Section 2 -------- */
+
+.section-2-wrapper {
+  background-color: #eaeaea;
+  color: black;
+  width: 100%;
+  min-height: 220px;
+}
+.sec-2-content {
+  width: 70%;
+  margin: auto;
+}
+.section-2-wrapper h1 {
+  font-size: 1.6rem;
+  font-weight: bold;
+  padding: 25px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  /* line-height: 1.5; */
+}
+.section-2-p {
+  -webkit-column-count: 2;
+  -moz-column-count: 2;
+  column-count: 2;
+  /* padding-top: 35px; */
+  padding: 10px;
+  column-gap: 2em;
+  line-height: 1.5;
+
+  /* text-align: justify; */
+}
+/* ------  Section 3 -------- */
+.section-3-wrapper {
+  width: 100%;
+  background-color: #333;
+}
+.sec-3-data {
+  max-width: 80%;
+  margin: auto;
+}
+.display-flex {
+  display: flex;
+  flex-direction: row;
+}
+.card {
+  min-height: 500px;
+  background-color: white;
+  margin: 30px 10px;
+}
+.card img {
+  max-width: 100%;
+  max-height: 200px;
+}
+.card h2 {
+  padding: 20px;
+  text-align: center;
+}
+.card p {
+  /* max-width: 100%; */
+  justify-content: center;
+  align-items: center;
+}
+/* ------------ Media Queries -------------- */
+
+@media (max-width: 500px) {
+  .sec-1-content button {
+    bottom: 10px;
+  }
+  .wrapper-1-data {
+    min-height: 700px;
   }
 }
